增加交易所高收益债研究

--- a/_config.yml
+++ b/_config.yml
@@ -107,4 +107,4 @@ stylus:
 ## Docs: http://hexo.io/docs/deployment.html
 deploy:
   type: github
-  repository: git@github.com:bsspirit/blog.wtmart.com.git
+  repository: https://github.com/bsspirit/blog.wtmart.com.git
